<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="?attr/colorSecondary"
        card_view:cardCornerRadius="20dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="5.5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:orientation="vertical"
                android:padding="10dp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/titleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Name"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/timeText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="1dp"
                        android:layout_marginTop="16dp"
                        android:text="Time:"
                        android:textSize="18sp"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintStart_toStartOf="parent"
                        card_view:layout_constraintTop_toTopOf="parent"
                        card_view:layout_constraintVertical_bias="0.6" />

                    <TextView
                        android:id="@+id/timeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:text="Time"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintStart_toEndOf="@+id/timeText"
                        card_view:layout_constraintTop_toTopOf="parent"
                        card_view:layout_constraintVertical_bias="0.542" />

                    <TextView
                        android:id="@+id/stateText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="136dp"
                        android:layout_marginTop="16dp"
                        android:text="Status:"
                        android:textSize="18sp"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintStart_toStartOf="parent"
                        card_view:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/stateTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:text="Status"
                        card_view:layout_constraintBottom_toBottomOf="parent"
                        card_view:layout_constraintStart_toEndOf="@+id/stateText"
                        card_view:layout_constraintTop_toTopOf="parent"
                        card_view:layout_constraintVertical_bias="0.542" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bottomContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:padding="10dp">

                <ImageButton
                    android:id="@+id/modifyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:background="@null"
                    android:gravity="start"
                    android:src="@drawable/ic_edit_48dp"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/deleteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="start"
                    android:src="@drawable/ic_delete_48dp"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>