...
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <Button
        android:id="@+id/sign_up"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginBottom="100dp"
        android:background="@color/green"
        android:gravity="center"
...
        android:id="@+id/weight_edit"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textColor="?attr/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/weight_edit_editTex"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.934" />

    <EditText
...
