<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/editProfile"
        android:title="@string/edit_profile" />
    <item
        android:id="@+id/editWeight"
        android:title="Edit weight" />
    <item
        android:id="@+id/settings"
        android:title="Settings" />
</menu>